package baseline;

/*
 *  UCF COP3330 Fall 2021 Application Assignment 2 Solution
 *  Copyright 2021 Jonathan Caques
 */

import java.util.List;

public class ClearInventory {


        //Clears entire inventory list
        void clear(List<ItemEntry> a){

            //Clear inventory list
            a.clear();

        }
}
