package baseline;

import javafx.fxml.FXML;

import java.awt.*;
import java.awt.event.ActionEvent;

public class EntryScreen {





}
