package baseline;

public class HTML {
    //Method to take convert an existing list to an HTML file
    //converttoHTML(){

     /*
        AddInvetory Object to access Inventory List
        Convert list into an HTML formatted file
      */
 }

    //saveHtmlFile(){}
        //Saves content into a html file



