package baseline;

public class LoadFile {

    /*
        Method that reads files, whether TSV, HTML, or JSON
        load(){}
     */
}
