@startuml
'https://plantuml.com/class-diagram
class InventoryManagmentApplication{
    main()
    start()
}

class ItemEntry{
      +ItemEntry(String serialNumber,String name,String value)
      +StringBuilder()
}

class Inventory{
      -add()
      -FindByName()
      -FindbySerialNumber()
}

class AddInventory{
    -addItem()
}

class RemoveInventory{
    -removeItem()
}

class ClearInventory{
    -clear
}

class EditInventory{
    -editName()
    -editValue()
    -editSerialNumber()
}

class SortInventory{
    -byName();
    -byValue();
    -bySerialNumber();
}

class SearchInventory{
    -search()
}

class TSV{
    -convertToTsv()
    -saveTsvFile()
}

class HTML{
    -convertToHtml()
    -saveHtmlFile()
}

class JSON{
    -convertToJson()
    -saveJsonFile()
}

class LoadFile{
    -load()
}

class HomeScreen{
    -handleNewButton
    -handleLoadButton
}

class InventoryScreen{
 -addItemButton()
 -removeItemButton()
 -clearItemButton()
}

class EntryScreen{
    TextField SerialField
    TextField NameField
    TextField ValueField

    -handleSerialField
    -handleNameField
    -handleValueField
}

InventoryManagmentApplication --> AddInventory
InventoryManagmentApplication --> RemoveInventory
InventoryManagmentApplication --> ClearInventory
InventoryManagmentApplication --> EditInventory
InventoryManagmentApplication --> SortInventory
InventoryManagmentApplication --> SearchInventory
InventoryManagmentApplication --> SavetoFile
Inventory --> AddInventory
SavetoFile -- TSV
SavetoFile -- HTML
SavetoFile -- JSON
LoadFile -- TSV
LoadFile -- HTML
LoadFile -- JSON
ItemEntry -- AddInventory
ItemEntry -- RemoveInventory
ItemEntry -- SearchInventory

HomeScreen -->LoadFile
HomeScreen --> InventoryScreen
LoadFile --> InventoryScreen
InventoryScreen <-- Inventory
InventoryScreen <--> EntryScreen
AddInventory --> InventoryScreen
RemoveInventory --> InventoryScreen
ClearInventory --> InventoryScreen


@enduml